--- a/app/src/main/res/layout/circuit_diagram.xml
+++ b/app/src/main/res/layout/circuit_diagram.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="0dp"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/black"
         android:layout_weight="0.30">
         <LinearLayout
             android:id="@+id/componentstackContainer"
@@ -36,6 +36,30 @@
             android:orientation="horizontal"
             android:background="@color/white">
 
+            <com.lukh.zoomabeview.view.CircuitComponent
+                android:id="@+id/resistance"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+            </com.lukh.zoomabeview.view.CircuitComponent>
+
+            <com.lukh.zoomabeview.view.CircuitComponent
+                android:id="@+id/voltage_source"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+            </com.lukh.zoomabeview.view.CircuitComponent>
+
+            <com.lukh.zoomabeview.view.CircuitComponent
+                android:id="@+id/current_source"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+            </com.lukh.zoomabeview.view.CircuitComponent>
+            <!--
             <ImageView
                 android:id="@+id/resistance"
                 android:layout_width="wrap_content"
@@ -43,6 +67,7 @@
                 android:layout_weight="1"
                 android:background="@color/cardview_shadow_start_color"
                 android:src="@drawable/resistance"></ImageView>
+
 
             <ImageView
                 android:id="@+id/voltage_source"
@@ -61,7 +86,7 @@
                 android:layout_weight="1"
                 android:background="@color/cardview_shadow_start_color"
                 android:src="@drawable/currentsource"></ImageView>
-
+            -->
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
