--- a/app/src/main/res/layout/sidespinner_view.xml
+++ b/app/src/main/res/layout/sidespinner_view.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <RelativeLayout
+        android:id="@+id/circuitComponentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -40,6 +41,7 @@
             android:layout_marginBottom="677dp"
             android:background="@drawable/ic_outline_replay_24"
             android:backgroundTint="@android:color/black"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            />
     </RelativeLayout>
 </merge>
