--- a/app/src/main/res/layout/circuitcomponentsmall.xml
+++ b/app/src/main/res/layout/circuitcomponentsmall.xml
@@ -1,6 +1,9 @@
 <merge xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:layout_width="50px"
+        android:layout_height="100px">
     <RelativeLayout
         android:id="@+id/circuitComponentContainer"
         android:layout_width="match_parent"
@@ -10,15 +13,15 @@
         <ImageView
             android:id="@+id/circuitComponent_"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="90px"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="31dp"
-            android:layout_marginEnd="56dp"
-            android:layout_marginBottom="0dp"
+            android:layout_marginTop="0px"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="10px"
             android:layout_weight="1"
             android:background="@color/cardview_shadow_start_color"
             android:src="@drawable/resistance"
@@ -26,23 +29,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
-
-        </ImageView>
-
-        <ImageView
-            android:id="@+id/current_direction"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignTop="@+id/circuitComponent_"
-            android:layout_alignEnd="@+id/circuitComponent_"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="168dp"
-            android:layout_marginTop="79dp"
-            android:layout_marginEnd="168dp"
-            android:layout_marginBottom="598dp"
-            android:src="@drawable/current_direction">
 
 
         </ImageView>
@@ -55,24 +41,22 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="360dp"
+            android:layout_marginStart="39px"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
-            android:layout_marginBottom="677dp"
+            android:layout_marginBottom="89px"
             android:background="@drawable/ic_outline_replay_24"
             android:backgroundTint="@android:color/black"
             android:textColor="@android:color/black" />
 
+    </RelativeLayout>
+
         <ImageView
             android:id="@+id/voltage_direction"
-            android:layout_width="wrap_content"
-            android:layout_height="468dp"
-            android:layout_alignTop="@+id/circuitComponent_"
-            android:layout_alignEnd="@+id/circuitComponent_"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="116dp"
-            android:layout_marginEnd="-96dp"
-            android:layout_marginBottom="116dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             app:srcCompat="@drawable/voltage_direction" />
-    </RelativeLayout>
+
+    </LinearLayout>
 </merge>
